--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <fa-icon [icon]="user" class="fa-xl"></fa-icon>
         <span>
             <p style="font-weight: bold">{{(user$ | async)?.name}}</p>
-            <p style="color: #007bff;text-decoration: underline;">{{(user$ | async)?.email}}</p>
+            <p style="color: #007bff;text-decoration: underline;font-size: .7rem">{{(user$ | async)?.email}}</p>
           </span>
       </div>
       <hr>
