--- a/src/app/core/navbar/navbar.component.scss
+++ b/src/app/core/navbar/navbar.component.scss
@@ -76,6 +76,7 @@
         cursor: pointer;
         padding: .4rem;
         display: flex;
+        margin-left: .5rem;
         align-items: center;
         border-radius: 50%;
         justify-content: center;
@@ -89,7 +90,7 @@
       background-color: white;
       right: .7rem;
       top: 71px;
-      width: 250px;
+      width: 270px;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
       z-index: 100;
@@ -102,7 +103,7 @@
         display: flex;
         align-items: center;
 
-        .ng-fa-icon{
+        .ng-fa-icon {
           background: #cccccc;
           border-radius: 50%;
           padding: 1rem;
@@ -119,8 +120,16 @@
         font-size: 1rem;
         padding: .5rem 1rem;
         color: #636363;
-        background: #cccccc;
         border-radius: .4rem;
+
+        .ng-fa-icon {
+          margin-right: 1rem;
+        }
+
+
+        &:hover {
+          background: #cccccc;
+        }
       }
     }
   }
