allow fetching of vendor name on product detail form

--- a/src/app/account/signup/signup.component.html
+++ b/src/app/account/signup/signup.component.html
@@ -1,8 +1,6 @@
 <div class="account-container">
   <div class="account-panel">
-    <div class="left">
-      <img src="assets/signin.svg" alt="">
-    </div>
+    <div class="left"><img src="assets/signin.svg" alt=""></div>
     <div class="right">
       <h3>Savana Admin</h3>
       <h4>Please Sign up to proceed...</h4>
@@ -16,7 +14,7 @@
             </option>
           </select>
           <small class='text-error' *ngIf='!signupForm.valid && signupForm.get("accountType")?.touched'>
-            <span *ngIf="signupForm.get('accountType')?.errors?.['required']">*Gender is required</span>
+            <span *ngIf="signupForm.get('accountType')?.errors?.['required']">*Account Type is required</span>
           </small>
         </div>
         <app-text-input formControlName="firstName" [label]="'First Name'"></app-text-input>
@@ -25,6 +23,16 @@
         <app-text-input formControlName="phoneNumber" [label]="'Phone No.'" [type]="'tel'"
                         [placeholder]="'0712345678'">
         </app-text-input>
+        <div class="type-content">
+          <label for="gender">Gender</label>
+          <select formControlName="gender">
+            <option value="" disabled selected hidden>Gender...</option>
+            <option *ngFor="let gn of gender" ngValue="{{gn.value}}" id="gender">{{gn.name}}</option>
+          </select>
+          <small class='text-error' *ngIf='!signupForm.valid && signupForm.get("gender")?.touched'>
+            <span *ngIf="signupForm.get('gender')?.errors?.['required']">*Gender is required</span>
+          </small>
+        </div>
         <app-text-input formControlName="password" [label]="'Password'" [type]="'password'"></app-text-input>
         <button type="submit" [disabled]="signupForm.invalid || isSubmitting" class="btn-success">Signup</button>
       </form>
